Organizing, adding print css styles. Tryna get seldon node process to compile print css.

--- a/source/layouts/ebook.slim
+++ b/source/layouts/ebook.slim
@@ -2,12 +2,13 @@ doctype html
 html lang="en-US" dir="ltr"
   head
     meta charset="UTF-8" /
+    title = current_page.data.title
     meta name="keywords" content="heathcare, #{current_page.data.tags}" /
     meta name="author" content="#{current_page.data.author}" /
     meta property="date" content="#{current_page.data.date}" /
-    = stylesheet_link_tag "print"
+    = stylesheet_link_tag "views/print"
     - if current_page.data.has_key?("customCSS")
-      = stylesheet_link_tag "print/"+current_page.data.customCSS
+      = stylesheet_link_tag "views/"+current_page.data.customCSS
   body
     //- if build?
     = yield
