--- a/source/layouts/ebook.slim
+++ b/source/layouts/ebook.slim
@@ -6,9 +6,9 @@ html lang="en-US" dir="ltr"
     meta name="keywords" content="heathcare, #{current_page.data.tags}" /
     meta name="author" content="#{current_page.data.author}" /
     meta property="date" content="#{current_page.data.date}" /
-    = stylesheet_link_tag "views/print"
+    = stylesheet_link_tag "print/print", "print/pdf"
     - if current_page.data.has_key?("customCSS")
-      = stylesheet_link_tag "views/"+current_page.data.customCSS
+      = stylesheet_link_tag "print/"+current_page.data.customCSS
   body
     //- if build?
     = yield
