--- a/source/assets/scss/print/pdf.scss
+++ b/source/assets/scss/print/pdf.scss
@@ -6,8 +6,9 @@
 /* define a page */
 @page {
    size: 5.5in 8.5in;  
-   margin: 70pt 60pt 70pt;
+   margin: 60pt 40pt 60pt;
 }
+
 /* styles for the right hand spread
 Bottom left we display the title of the book, bottom right the page using a CSS counter, top right the content of the current chapter */
 @page:right{ 
@@ -51,8 +52,9 @@ Bottom right book title, bottom left current page */
 /* reset chapter and figure counters on the body */
 body {
     counter-reset: chapternum figurenum;
+    font-family: $font_sans;
     // font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-    line-height: 1.5;
+    line-height: 1.3;
     font-size: 11pt;
 }
 /* get the title of the current chapter - this will be the content of the h1 
@@ -68,6 +70,9 @@ h1.chapter:before {
     counter-increment: chapternum;
     content: counter(chapternum) ". ";
 }
+.lead {
+  font-family: $font_serif;
+}
 /* increment and display figure counter */
 figcaption:before {
     counter-increment: figurenum;
@@ -81,8 +86,16 @@ h1,h2,h3,h4,h5 {
 h1+p, h2+p, h3+p {
     page-break-before: avoid;
 }
+.headline-4 {
+  font-size: 12pt;
+}
+.spaced-out {
+  letter-spacing: 0.1pt;
+  text-transform: uppercase;
+}
 table, figure {
     page-break-inside: avoid;
+    font-size: smaller;
 }
 ul.toc {
     list-style: none;
@@ -105,4 +118,17 @@ a {
     &.xref:after {
         content: " (page " target-counter(attr(href, url), page) ")";
     }
+}
+chapter#cover {
+  page: chapter-cover;
+}
+@page chapter-cover:first {
+  background: {
+    image: url("dhsf-ebook-cover-2x.png");
+    attachment: fixed;
+    repeat: no-repeat;
+    size: cover;
+    position: center center;
+  }
+  prince-background-image-resolution: "288dpi";
 }
