--- a/source/layouts/ebook.slim
+++ b/source/layouts/ebook.slim
@@ -6,7 +6,10 @@ html lang="en-US" dir="ltr"
     meta name="keywords" content="heathcare, #{current_page.data.tags}" /
     meta name="author" content="#{current_page.data.author}" /
     meta property="date" content="#{current_page.data.date}" /
-    = stylesheet_link_tag "print/print", "print/pdf"
+    - if current_page.data.has_key?("relative_css")
+      = stylesheet_link_tag "print/print", "print/pdf", :relative => true
+    - else
+      = stylesheet_link_tag "print/print"
     - if current_page.data.has_key?("customCSS")
       = stylesheet_link_tag "print/"+current_page.data.customCSS
   body
