--- a/source/assets/scss/print/print.scss
+++ b/source/assets/scss/print/print.scss
@@ -4,7 +4,7 @@
 @import '../mixins/functions';
 /* This defines styles and classes used in the EPUB and MOBI versions of the book */
 body { 
-  margin: 5%; 
+  margin: 4%; 
   text-align: justify; 
   font-size: medium;
   font-family: sans-serif;
@@ -18,48 +18,93 @@ h1.title, h2.author, h3.date {
 }
 p.lead {
   font-family: serif;
-  font-size: 110%;
+  font-size: 130%;
 }
-ol.toc { 
+
+ol.toc, ul.toc { 
   padding: 0; 
   margin:0; 
   li { 
     list-style-type: none; 
     margin: 0; 
     padding: 0; 
-    line-height: 1.5; 
+    line-height: 1.3; 
   }
   ol {
     padding-left: 1em;
   }
 }
-
+.section {
+  margin-bottom: 25pt;
+}
 
 /* page-break-before, page-break-after, page-break-inside are used to control where breaks occur as the content flows from page to page. */
+.page-break-after {
+  page-break-after: always;
+}
+h1,h2,h3,h4,h5,p,li {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
 h1,h2,h3,h4,h5 {
-  font-family: sans-serif;
+  // font-family: sans-serif;
   font-weight: bold;
   page-break-after: avoid;
   page-break-inside: avoid;
   text-align: left;
 }
-
-h3+p { // h1+p, h2+p, 
-  page-break-before: avoid;
-}
 h1 {
   border-bottom: 1px solid $gray-9;
   padding: 0 0 .6em 0;
-  .title {
+  &.title {
     border: 0;
   }
 }
 h1, h2 { // chapter heads
   page-break-before: always;
 }
+
+h3+p, { // h1+p, h2+p, 
+  page-break-before: avoid;
+  // margin-bottom: 1pt;
+}
+.headline-4 {
+  font-size: 10pt;
+}
+.spaced-out {
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+.subheader {
+  // margin-top: 5pt;
+  margin-bottom: 0;
+  color: $gray-8;
+}
+.text-light {
+  font-weight: $font-weight-light;
+}
+.text-bold {
+  font-weight: $font-weight-bold;
+}
+.no-bullet {
+  list-style-type: none;
+}
+// ===== reskinned components ======
+.callout--gray-light {
+  background-color: black(0.07);
+}
+.callout {
+  margin: 1.5em 0; // use em as it might be in a sea of type
+  padding: 1.3em;
+  page-break-inside: avoid;
+}
+p {
+  line-height: 1.3;
+  // margin-bottom: 1em;
+}
 table, figure {
   page-break-inside: avoid;
-  font-family: sans-serif;
+  // font-family: sans-serif;
   font-size: smaller;
 }
 @import 'node_modules/foundation-sites/scss/components/_table.scss';
