--- a/source/innovation/ebooks/dhsf/index.html.slim
+++ b/source/innovation/ebooks/dhsf/index.html.slim
@@ -14,53 +14,97 @@ ruby:
   role = "Chief Marketing Officer"
   company = "Datica Health, Inc."
 
-css:
-  @page:right{ 
-    @bottom-left {
-      content: "#{current_page.data.title}";
-    }
-  }
-  @page:left {
-    @bottom-right {
-      content: "#{current_page.data.title}";
-    }
-  }
-
 chapter#cover
+header#introduction.page-break-after
+  h1.title= current_page.data.title
+  section.section
+    p.lead The Digital Health Success Framework (DHSF) is a simple guide for the makers of digital healthcare products.
+    p.lead The Internet is full of  resources to help turn ideas into lean startups or businesses, but things are a little different in the wild wild west of digital health technology. There are considerations in healthcare not found in any other industry, and no one has time to learn them all.
+    p.lead We’ve simplified the unique complexities to help you get your digital health products from napkin scribble to market adoption with fewer surprises. You will leave with a better understanding of how to manage the challenges ahead.
+  section.section
+    h2 Table of Contents
+    p The DHSF gives guidance and insights into these main topics:   
+    ul.toc.no-bullet
+      - data.views.dhsf.phases.each_with_index do |phase, id|
+        li
+          a.text-bold href="#df-#{phase["slug"]}-strategy" title="#{phase["label"]}" = phase["label"]
+          / br /
+          p = phase["desc"]
+      li
+        a.text-bold href="#background" title="Backstory" Background: The Details Behind the Framework
 
-h1.title= current_page.data.title
-ul.toc
-  - data.views.dhsf.phases.each_with_index do |phase, id|
-    li
-      a href="index.html#df-#{phase["slug"]}-strategy" title="#{phase["label"]}" 
-        = phase["label"]
-
+chapter.page-break-after
+  img src="dhsf-timeline.png" alt="DHSF Dimensions and timeline" width="100%"
 - data.views.dhsf.phases.each_with_index do |phase, id|
-  h2 id="df-#{phase["slug"]}-strategy" = phase["label"]
-  p.lead= phase["desc"]
-  ul id="df-stage--timeline-#{id}" 
-    - phase["stages"].each_with_index do |stage, index|
-      li 
-        a href="##{phase["slug"]}-#{stage["slug"]}" title=("Month #{stage["time"]}: #{stage["title"]}")
-          | Month #{stage["time"]}: #{stage["title"]}
-  section id="df-#{phase["slug"]}-stage-content" 
-    - phase["stages"].each_with_index do |stage, index|
-      div id="#{phase["slug"]}-#{stage["slug"]}" 
-        h4.headline-4.spaced-out Month #{stage["time"]}
-        h3 = stage.title
-          a href="datica.com/dhsf/##{phase["slug"]}-#{stage["slug"]}" title=("A link to the DHSF entry at datica.com/dhsf.") #
-        - if phase.has_key?("lead")
-          = Kramdown::Document.new(phase["lead"]).to_html
-        = Kramdown::Document.new(stage["body"]).to_html
-          / .columns.small-12.large-4
-          /   - if stage.has_key?("asides")
-          /     - stage["asides"].each do |aside|
-          /       .group= aside
-          /   - if stage.has_key?("discovery_topic")
-          /     - related_discover = data.site.discover[stage.discovery_topic.to_s]
-          /     = partial "/partials/cards/discover", :locals => { :post => related_discover, :classes => "group" }
-          /   - if stage.has_key?("customer_id")
-          /     - related_customer = data.site.customers[stage.customer_id.to_s]
-          /     = partial "/partials/content/card-case-study-compact",  :locals => { :cf_customer => related_customer, :subhead => "case study" }
-          /   - if stage.has_key?("quote_id")
-          /     - related_quote = data.site.quotes[stage.quote_id.to_s]
+  chapter id="df-#{phase["slug"]}-strategy"
+    css:
+      @page:right{ 
+        @bottom-left {
+          content: "#{current_page.data.title}: #{phase["label"]}";
+        }
+      }
+      @page:left {
+        @bottom-right {
+          content: "#{current_page.data.title}: #{phase["label"]}";
+        }
+      }
+    h2 = phase["label"]
+    p.lead= phase["desc"]
+    ul id="df-stage--timeline-#{id}" 
+      - phase["stages"].each_with_index do |stage, index|
+        li 
+          a href="##{phase["slug"]}-#{stage["slug"]}" title=("Month #{stage["time"]}: #{stage["title"]}")
+            | Month #{stage["time"]}: #{stage["title"]}
+    section.section id="df-#{phase["slug"]}-stage-content" 
+      - phase["stages"].each_with_index do |stage, index|
+        div.section id="#{phase["slug"]}-#{stage["slug"]}" 
+          h4.headline-4.spaced-out.subheader Month #{stage["time"]}
+          h3 = stage.title
+            a href="datica.com/dhsf/##{phase["slug"]}-#{stage["slug"]}" title=("A link to the DHSF entry at datica.com/dhsf.") #
+          - if phase.has_key?("lead")
+            = Kramdown::Document.new(phase["lead"]).to_html
+          = Kramdown::Document.new(stage["body"]).to_html
+          - if stage.has_key?("asides")
+            - stage["asides"].each do |aside|
+              aside.section= aside
+          - if stage.has_key?("discovery_topic")
+            - related_discover = data.site.discover[stage.discovery_topic.to_s]
+            = partial "/partials/cards/discover", :locals => { :post => related_discover, :classes => "group" }
+          / - if stage.has_key?("customer_id")
+            / - related_customer = data.site.customers[stage.customer_id.to_s]
+            / = partial "/partials/content/card-case-study-compact",  :locals => { :cf_customer => related_customer, :subhead => "case study" }
+          / - if stage.has_key?("quote_id")
+          /   - related_quote = data.site.quotes[stage.quote_id.to_s]
+chapter#background
+  section.section
+    h4.subheader.spaced-out Background
+    h2.headline-3 The Details Behind the Framework
+    h3#living-document.headline-4 This is a living document
+    p The guide will be constantly evolving. Developing new articles and strategies are an on-going effort as Datica continues to have rich conversations with the market.
+    p If you have any feedback, send an email to
+      a href="mailto:hello@datica.com" hello@datica.com.
+    h3#what-this-framework-is-not.headline-4 What this framework is not
+    p Don’t mistake the DHSF as an all-encompassing guide to successful company-building. A successful business succeeds along innumerable dimensions, outside of compliance, infrastructure, or integration. This framework is not those ingredients:
+    ul
+      li Fundraising advice
+      li Company formulation practices
+      li Lean startup principles
+      li How to hire
+      li How to develop a strategy
+      li And so on
+    p That’s what incubators like YCombinator or Gener8tor do, or programs like Cedars-Sinai+TechStars, focus on.
+    p Specific to healthcare, this framework does not go deep into FDA regulations or life science particulars like GxP. While there is significant overlap with our expertise in compliance, we aren’t yet experts in those arenas to provide a detailed guide on navigating the FDA or meeting GxP requirements. We will furnish helpful external resources to learn more elsewhere, however.
+    h3#how-we-became-experts.headline-4 How We Became Experts
+    p Over the last 4-plus years, Datica has engaged with thousands of digital health organizations, from single-founder startups to groups within Fortune 100 companies like Johnson &amp; Johnson or UnitedHealthcare. We often chat with them as they are figuring out how to deal with HIPAA compliance or data exchange. Some were far enough along with their idea to become customers, but many did not as they first searched for traction.
+    p Over the course of several thousand conversations, we started to see clear patterns emerge around topics like technology, infrastructure, compliance, and interoperability. This framework is the distillation of what matters to the success of digital health products.
+    p Datica is not going to pretend we know the entire scope of what it takes to make a successful business—things like capitalization strategies or Lean Startup advice—or the best methodologies for product development—like debating waterfall vs. agile, or outcome-driven innovation. But we <em>do</eM> have one of the most credible points of view on the technological underpinnings of digital health. Companies and teams, ideas and innovations, can look to this framework to obtain a stronger handle on an intelligent way to manage the underlying burdens unique to digital health products.
+  aside.section
+    .callout.callout--gray-light
+      img src="datica-logo-black.svg" width="120"
+      .text-center
+        h3#company-snapshot.headline-4.nomargin Datica Company Snapshot
+        .pub-date As of July 1, 2017
+      ul
+        li 3,272 unique organizations, companies, groups, and individuals with which we have engaged via a business relationship. Each one we heard their story, understood their needs, and observed their trajectory.
+        li Hundreds of digital health customers
+        li More than 200 integration partners
