--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -24,7 +24,7 @@ priority: "0.9"
         p.lead= current_page.data.summary
 
         h2.headline-3 The Datica Cloud Compliance Management System (CCMS)
-        p The CCMS gives uers visibility and control over the compliance of their Kubernetes cluster:
+        p The CCMS gives users visibility and control over the compliance of their Kubernetes cluster:
         ul.bullet-outside.bullets-chevron
         li <strong>Initial State:</strong> Compliance in the cloud is built on a foundation of secure, logical configurations. Without a proper foundation, the proverbial compliance house fails. When Datica deploys a Kubernetes cluster, we do so with configuration automation and security best practices.
         li <strong>Compliance Artifacts:</strong> Once the proper compliance state is in place, the next step to ensuring continuous compliance is collecting data as compliance artifacts. Datica’s compliance deployments (logging, monitoring, IDS, etc.) report and log compliance artifacts to an encrypted block storage object. The CCMS then uses this data to ensure continuous compliance.
