LOL: nope! preloading CSS in server headers (via toml here) does not double-load CSS. Result was no css! hey, it's fast...

--- a/source/layouts/basic.erb
+++ b/source/layouts/basic.erb
@@ -8,7 +8,7 @@
         <%# Icons %>
         <%= partial "partials/head/icons" %>
         <%# Assets %>
-        <%#= stylesheet_link_tag "seldon" %>
+        <%= stylesheet_link_tag "seldon" %>
         <% if current_page.data.has_key?("customCSS") %>
             <%= stylesheet_link_tag "views/"+current_page.data.customCSS %>
         <% end %>
