Created way to inject preloaded assets on a per-page basis. Basic template (and home) only for now.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -9,6 +9,13 @@ layout: "basic"
 priority: "1.0"
 collectionName: "home"
 feed_url: "https://datica.com/blog/feed.xml"
+asset_preload: '<link rel="preload" as="image" href="/public/img/art/waves-dots-full.svg" />
+<link rel="preload" as="image" href="https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=256" />
+<link rel="preload" as="image" href="https://images.ctfassets.net/189dvqdsjh46/7twnCUuD72YGS4cusiS6mQ/fa43b0f1faaecb4e8865415add79e538/logo-hipaa-federal.png?w=256" />
+<link rel="preload" as="image" href="https://images.ctfassets.net/189dvqdsjh46/1Tt54MVMgkqIW8OWaYKmoo/7cb2c9e5e3d4f54cbd7498cc7e001fec/logo-aicpa.png?w=256" />
+<link rel="preload" as="image" href="https://images.ctfassets.net/189dvqdsjh46/2gXAIuikiQyWYMmU4QAoOe/0106b4a35cd09e120f0eca6ee6a15446/gdpr-ready-badge.png?w=256" />
+<link rel="preload" as="image" href="https://images.ctfassets.net/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png?w=256" />
+<link rel="preload" as="image" href="/public/img/art/platform-iso-illustration-bg.svg" />'
 ---
 - current_page.data.share_image = image_share_platform
 - current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
