--- a/source/partials/ctas/_card-schedule-demo.slim
+++ b/source/partials/ctas/_card-schedule-demo.slim
@@ -1,6 +1,6 @@
 .card-section.text-center
   h3.headline-5 Schedule a demo to learn more.
-  = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo", :button_classes => "button expanded spaced-out", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
+  = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo", :button_classes => "button expanded spaced-out success", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
 .card-section.card-section--flush.text-center
   h4.headline-5.nomargin Questions?
   a(href="/contact" title="Let's talk.") Talk with a customer representative.
