--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -8,6 +8,7 @@ date: "July 15, 2017"
 ogType: "product"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3sLvuskfFmYoAieKyCG644/d0b35a015189bad32c0ebc12053129e0/services-share.jpg"
 customCSS: "platform"
+customJS: "/public/js/svg-injector.js"
 layout: basic
 priority: "0.9"
 # collectionName: "platform"
