Added recent news to About timeline.

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -197,6 +197,20 @@ layout: company
                         <p>Catalyze is now Datica. <a href="/catalyze">Read about the transition <i class="fa fa-caret-right"></i></a></p>
                     </div>
                 </div>
+                <div class="block">
+                    <div class="date"><span>May 31, 2018</span></div>
+                    <span class="dot"></span>
+                    <div class="content">
+                        Datica <a href="/press-release/datica-celebrates-5th-anniversary-as-a-cloud-compliance-and-security-leader/" title="Read the press release">Celebrates 5th anniversary</a> as a compliance and security leader for the cloud.
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="date"><span>March 5, 2018</span></div>
+                    <span class="dot"></span>
+                    <div class="content">
+                        Datica <a href="/press-release/datica-launches-kubernetes-enabled-platform/" title="Read the press release">launches Kubernetes-enabled platform</a> to extend aws and cloud accounts for customers.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
