--- a/source/seldon/ui.html.erb
+++ b/source/seldon/ui.html.erb
@@ -171,10 +171,10 @@ hide_from_sitemap: true
                 <span id="emailLabel2" class="label">Unread</span>
             </div>
             <div class="callout callout--dark">
-                <p><span class="label secondary">TO-DO</span> On dark backgrounds, use the <code>.label .label-hollow-inverted</code> classes.</p>
+                <p><span class="label secondary">TO-DO</span> On dark backgrounds, use the <code>.label .hollow-inverted</code> classes.</p>
                 <div class="group">
                     <span class="label">Basic Default Label</span>
-                    <span class="label label-hollow-inverted">hollow inverted</span>
+                    <span class="label hollow-inverted">hollow inverted</span>
                 </div>
             </div>
         </div>
