--- a/source/contentful_templates/podcast.html.erb
+++ b/source/contentful_templates/podcast.html.erb
@@ -48,7 +48,7 @@ end
                         &nbsp;
                         <% p["tags"].each do |tag| %>
                             <% if tag.has_key?("tag_full") %>
-                                <span class="label label-hollow-inverted round"><%= tag["tag_full"] %></span>
+                                <span class="label hollow-inverted round"><%= tag["tag_full"] %></span>
                             <% end %>
                         <% end %>
                     <% end %>
