--- a/source/guides/index.html.slim
+++ b/source/guides/index.html.slim
@@ -24,19 +24,24 @@ ruby:
         .row.align-center
             .columns.small-12.large-8
                 - sorted_entries.each do | id, guide_entry |
-                    .row.group
-                        .columns.small-8
-                            .h2.headline-4.nomargin
+                    - if guide_entry.has_key?("image_thumb")
+                        - thumb = guide_entry.image_thumb.url
+                    - elsif guide_entry.has_key?("bg_image")
+                        - thumb = guide_entry.bg_image.url
+                    - else
+                        - thumb = nil
+                    .row.group.align-middle
+                        - unless thumb == nil
+                            .columns.small-4.medium-3.large-3
+                                a href="/guide/#{guide_entry["slug"]}" title=("Get your free guide")
+                                    img.thumbnail(src="#{thumb}?fit=thumb&w=300&h=300" alt="Guide Preview")
+                        .columns.small-12.medium-8.large-9
+                            .h2.headline-4
                                 a(href="/guide/#{guide_entry["slug"]}" title="Get your free guide") = guide_entry["title"]
                                 | &nbsp;
                                 - if guide_entry.has_key?("discovery_topic")
                                     span.label.info.round = data.site.discover[guide_entry.discovery_topic.id].title
                             .text-small
                                 = Kramdown::Document.new(guide_entry["summary"]).to_html
-                            / = partial "partials/snippets/button", :locals => { :label => "Get your free guide", :url => "/guide/#{guide_entry["slug"]}", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
-                        - if guide_entry.has_key?("image_thumb")
-                            .columns.small-4
-                                a href="/guide/#{guide_entry["slug"]}" title=("Get your free guide")
-                                    img(src="#{guide_entry.image_thumb.url}?h=200" alt="#{guide_entry.title}")
 
                 = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
